# videoteka-media-center

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.sh  pyproject.toml  requirements.txt  setup.py
packaging/appimage/: AppImageBuilder.yml
packaging/flatpak/: appdata.xml  org.videoteka.MediaCenter.yml
src/: __init__.py  main.py  version.py
src/controllers/: __init__.py  app_controller.py  media_controller.py
src/models/: __init__.py  database.py  media_file.py  media_scanner.py
src/resources/styles/: main.qss
src/utils/: __init__.py  file_utils.py  media_preview.py  thumbnail_generator.py  thumbnail_worker.py
src/views/: __init__.py  category_panel.py  main_window.py  media_card.py  media_grid.py  setup_wizard.py  shortcuts_dialog.py
tests/: test_database.py  test_file_utils.py  test_media_scanner.py  test_thumbnail_generator.py
